2005-04-27  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: Typo in cache param.

2005-04-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Always use new cache files.

2005-04-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm, Engine.pm, PkgVersion.pm, SelfUpdate.pm, Services.pm: Use
	-lockwait versions of dpkg and apt-get.

2005-04-27  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Better accessor usage in dumpinfo

2005-04-26  Ben Hines <benh57@users.sourceforge.net>

	* Config.pm: Properly handle Verbose set >= 3.
	
2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm, Package.pm: Fix up lock_wait a bit.
	* Engine.pm: Lock-synchronize scanpackages.

2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Services.pm: Generalize do_lock(). It's now in Services and
	called lock_wait().

2005-04-26  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, PkgVersion.pm: Add new accessor get_epoch().

2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Engine.pm: Revamp update_db args, make cmd_index reject the
	cached infolist.

2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: But they do invalidate the infolist cache.

2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Changes to fink.conf should no longer invalidate the PDB
	cache.

2005-04-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: reverting vasi's path-prefix change of 4/25: we 
	don't want to force a default gcc after all

2005-04-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Engine.pm, SelfUpdate.pm: Fix up forget_packages().

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Have cmd_scanpackages() use apt-ftparchive with caching if it
	is available, for greatly sped-up scanpackages. Enable the fink.conf option
	AutoScanpackages, to automatically run scanpackages whenever a new .deb
	is built.
