@@ -1,3 +1,7 @@
+2005-04-27  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
+	* Services.pm: Don't restrict dpkg/apt-get to %p/bin.
+
 2005-04-27  Daniel Macks  <dmacks@netspace.org>
 
 	* Package.pm: Typo in cache param.
